# docs/swagger.yaml
@@ -163,7 +163,7 @@ info:
   title: eco-service API
   version: "1.0"
 paths:
-  /dashboard/building-power-consumption:
+  /dashboard/building-floor-power-consumption:
     get:
       description: 建筑楼层用电量，根据粒度获取建筑所有楼层的用电量
       parameters:
@@ -200,6 +200,79 @@ paths:
           schema:
             $ref: '#/definitions/common.Response'
       summary: 建筑楼层用电量
+      tags:
+      - Dashboard
+  /dashboard/building-power-consumption:
+    get:
+      description: 建筑用电量，根据粒度获取所有建筑的用电量
+      parameters:
+      - description: period, hour/day/month/year
+        in: query
+        name: period
+        required: true
+        type: string
+      - description: query_time,格式2024-01-01,不传则默认当天
+        in: query
+        name: query_time
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: objects array
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.LabelData'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 建筑用电量
+      tags:
+      - Dashboard
+  /dashboard/building-type-power-consumption:
+    get:
+      description: 建筑细分用电量，根据粒度,和分类获取所有建筑的用电量。分类为1:照明，2:动力
+      parameters:
+      - description: period, hour/day/month/year
+        in: query
+        name: period
+        required: true
+        type: string
+      - description: query_time,格式2024-01-01,不传则默认当天
+        in: query
+        name: query_time
+        type: string
+      - description: type
+        in: query
+        name: type
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: objects array
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/entity.LabelData'
+                  type: array
+              type: object
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/common.Response'
+      summary: 建筑细分用电量
       tags:
       - Dashboard
   /dashboard/park-carbon-emission:
